<resources>
    <string name="app_name">HubBox Collectpoint App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="text_step_1"><![CDATA[
    <b><h2>Welcome to the HubBox Parcel App</h2>
        <p>Dear Jon &amp; team,</p>
        <p>Welcome to the HubBox Collect Point Network. We’re delighted to have you on board and we can’t wait to get you started.</p>
        <p>Before everything goes live, please check out our brief tour and training video. Once this has been completed we’ll get you up and running on the website.</p>
        <p>Best, The HubBox Team</p>
     </b>
    ]]>
    </string>
    <string name="text_btn_1">Next</string>

    <string name="text_step_2"><![CDATA[
    <b><h2>Step by Step guide to getting started.</h2>
    <p>
    1. Agree to our Collect Point Agreement terms – we’ve already sent you a copy of this to sign online via Docusign – if not please call us
   </p><p> 2. Get your camera up and running
    </p>

    ]]>
    </string>
    <string name="text_btn_2">Agree to HubBox Terms</string>
    <string name="text_step_3"><![CDATA[
    <b><h2>Step 3: Let’s get your camera up and running</h2>
<p>As you saw on the video, we have a camera installed on the App which takes pictures of labels and automatically logs them in!
Note, you use this when there is no HubBox ID anywhere on the label.
</p>
<p>
To check everything is setup, we want you to take 3 photos as per the guide
</p>
<p>
Click below to get going and follow the instructions.
</p></b>

    ]]>
    </string>
    <string name="text_btn_3">Open Camera</string>
    <string name="text_step_4"><![CDATA[
    <b><h2>Step 4: You’re all set – </h2>
    <p>
You’ll find plenty more helpful information once you’re in the App. As you can see, being a HubBox Collect Point could not be simpler.
</p><p>
The final thing to do is follow the practice instructions on the brochure and log your first two parcels in and out. We’ll then be in touch to make sure everything is okay.
</p></b>

    ]]>
    </string>
    <string name="text_btn_4">Go to the App &amp; complete the parcel practice</string>


    <string name="text_and_cam_step_1"><![CDATA[
    <b><p>Picture 1: Inside your shop
</p><p>HubBox marketing materials
</p><p>On show</p>
</b>
    ]]>
    </string>

    <string name="text_and_cam_step_2"><![CDATA[
    <b><p>Picture 2: Outside  of your shop showing our sticker in the window
</p>
</b>
    ]]></string>

    <string name="text_and_cam_step_3"><![CDATA[
    <b><p>Picture 3: Practice Parcel testing the HubBox ID
</p>
</b>
    ]]></string>
    <string name="take_shot_lbl">Take shot</string>
    <string name="new_shot_lbl">New shot</string>
    <string name="next_lbl">Next</string>
    <string name="username_lbl">Username</string>
    <string name="password_lbl">Password</string>
    <string name="reset_pwd_lbl">Reset password</string>
    <string name="login_lbl">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="faq_text"><![CDATA[
    <h3>
What is HubBox?
</h3>
<p>
HubBox is a parcel Click & Collect service. You can shop anywhere online and get your parcels delivered to here.
</p>
<h3>
How much does HubBox cost?
</h3>
<p>
HubBox is FREE for the first month. After that customers can either choose:
</p>
Pay as you Go = £1.95 per parcel
Subscription = £5.95 per month. Allows up to 10 parcels per month (if they do more they pay an additional £1.95 per parcel)
</p>
<h3>
How do I join HubBox?
</h3>
<p>
Customers need to register at www.hub-box.com to join.
</p>
<h3>
What online shops and delivery companies does HubBox work with?
</h3>
<p>
Customers can shop at any online shop worldwide and use any delivery company with HubBox.
</p>
<h3>
What size parcels can I have delivered?
</h3>
<p>
Rule of Thumb: As long as one person can comfortably carry the parcel, it will be accepted. Nothing bigger than a metre cubed or 20KG will be accepted.
</p>
<h3>
How long do I have to collect my parcel?
</h3>
<p>
Customers must collect their parcel within 14 days.
</p>
    ]]></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="give_out_parcel_lbl">Give out a parcel</string>
    <string name="add_a_parcel_lbl">Add a parcel</string>
    <string name="hubbox_code_lbl">HubBox code</string>
    <string name="just_a_name_lbl">Just a name</string>
    <string name="enter_hubbox_lbl">Enter HubBox Code</string>
    <string name="add_this_parcel">Add this parcel</string>
    <string name="add_just_name_lbl">Enter the full name on the parcel</string>
    <string name="just_name_btn_lbl">Add this parcel</string>
    <string name="ref_number_lbl">REF Number</string>
    <string name="id_lbl">ID</string>
    <string name="REF_NO_lbl_2">they will have received it in an email</string>
    <string name="REF_NO_lbl_1">Ask for their REF Number</string>
    <string name="give_out_this_parcel_lbl">Give out this parcel</string>
    <string name="which_have_you_seen_lbl">Which of these have you seen?</string>
    <string name="passport_lbl">Passport</string>
    <string name="driver_license_lbl">Drivers License</string>
    <string name="bank_card_lbl">Bank card</string>
    <string name="release_parcels_lbl1">That\'s great, release 4 parcels to Sam</string>
    <string name="release_parcels_lbl2">The HubBox ID on the parcel is HB461487</string>
    <string name="click_to_confirm_lbl">Click to confirm</string>
    <string name="success_give_out_parcel_tst">Success! You have given out a parcel</string>

</resources>
