<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hubbox.collectpoint.app.fragments.IdDocumentChoiseFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/which_have_you_seen_lbl" />

    <Button
        android:id="@+id/passport_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passport_lbl" />
    <Button
        android:id="@+id/drive_license_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/driver_license_lbl" />
    <Button
        android:id="@+id/bank_card_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bank_card_lbl" />
</LinearLayout>