<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hubbox.collectpoint.app.fragments.RefNumberEnterFragment">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/REF_NO_lbl_1"/>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/REF_NO_lbl_2"/>
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/ref_no_et"/>
<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/give_out_this_parcel_lbl"
    android:id="@+id/give_out_parcel_btn"/>

</LinearLayout>
