<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hubbox.collectpoint.app.fragments.ConfirmReleaseParcelsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/release_1_tv"
        android:text="@string/release_parcels_lbl1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/release_2_tv"
        android:text="@string/release_parcels_lbl2"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_btn"
        android:text="@string/click_to_confirm_lbl"/>
</LinearLayout>
